--- a/package.json
+++ b/package.json
@@ -11,6 +11,46 @@
     "start": "npm start --workspaces --if-present",
     "test": "npm test --workspaces --if-present"
   },
+  "devDependencies": {
+    "@dfinity/agent": "0.10.3",
+    "@dfinity/candid": "0.10.3",
+    "@dfinity/principal": "0.10.3",
+    "@material-ui/core": "4.6.1",
+    "@material-ui/icons": "4.5.1",
+    "assert": "2.0.0",
+    "buffer": "6.0.3",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.5.1",
+    "events": "3.3.0",
+    "html-webpack-plugin": "5.5.0",
+    "process": "0.11.10",
+    "stream-browserify": "3.0.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "5.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "util": "0.12.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "^4.4.0"
+  },
+  "browserslist": [
+    "last 2 chrome version",
+    "last 2 firefox version",
+    "last 2 safari version",
+    "last 2 edge version"
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "^0.10.3",
+    "@dfinity/authentication": "^0.10.3",
+    "@dfinity/identity": "^0.10.3",
+    "lit-html": "^1.4.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-scripts": "^3.0.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5"
+  },
   "type": "module",
   "workspaces": [
     "src/token_frontend"
